--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,50 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.my-leaderboard-container {
+  font-family: Arial, sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.my-leaderboard-title {
+  color: #333;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.my-leaderboard-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.my-table-header {
+  background: #f2f2f2;
 }
 
-.card {
-  padding: 2em;
+.my-table-cell {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
 }
 
-.read-the-docs {
-  color: #888;
+.my-table-row:hover {
+  background-color: #f5f5f5;
+}
+
+.my-participant-cell {
+  padding: 10px;
+}
+
+.my-participant-info {
+  display: flex;
+  align-items: center;
+}
+
+.my-participant-image {
+  width: 30px;
+  height: 30px;
+  margin-right: 8px;
+  border-radius: 50%;
+}
+
+.my-participant-address {
+  color: #007bff;
+}
+
+.my-score-cell {
+  padding: 10px;
 }
